CFY-1576 - Add the sign "-" to charts titles, CFY-1577 - Loading screen overlap the footer + loading message is fixed

--- a/app/styles/_deployment.scss
+++ b/app/styles/_deployment.scss
@@ -1437,7 +1437,7 @@
     .grafanaLoader {
         position: absolute;
         width: 100%;
-        height: 850px;
+        height: 686px;
         background-color: #ffffff;
         text-align: center;
 
